<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_use_phone">使用手机号登录</string>
    <string name="login_use_email">使用邮箱登录</string>
    <string name="login_use_pwd">使用密码登录</string>
    <string name="login_pwd">密码登录</string>
    <string name="login_code">验证码登录</string>
    <string name="input_area">请输入地区名</string>
    <string name="input_content">请输入内容</string>
    <string name="phone_area">手机号归属地</string>
    <string name="search">搜索</string>
    <string name="login_privacy">登录即代表同意《隐私政策》和《服务协议》</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="service_agreement">《服务协议》</string>
    <string name="read_login_privacy">请仔细阅读用户协议条款并勾选</string>
    <string name="register">注册</string>
    <string name="create_account">创建新账号</string>
    <string name="to_register">如果没有账号请先注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="save">保存</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_email">请输入邮箱账号</string>
    <string name="input_verification">请输入验证码</string>
    <string name="get_verification_code">验证码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="second_resend">%ss后重发</string>
    <string name="input_pwd">请输入密码</string>
    <string name="reset_pwd">修改密码</string>
   <string name="input_account">请输入账号</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_confirm_pwd">请再次输入新密码</string>
    <string name="pwd_not_equal">输入的两次密码不一致</string>
    <string name="confirm">确认</string>
    <string name="tab_chat">消息</string>
    <string name="tab_friends">朋友</string>
    <string name="tab_find">发现</string>
    <string name="tab_mine">我的</string>
    <string name="tab_self_center">个人中心</string>
    <string name="title_chat_msg">消息</string>
    <string name="add_friend">加好友</string>
    <string name="user_not_exit">该用户不存在</string>
    <string name="apply_friend_success">好友申请成功，等待对方验证</string>
    <string name="apply_friend_fail">好友申请失败，请稍后再试</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="added">已添加</string>
    <string name="refused">已拒绝</string>
    <string name="wait_for_verify">等待对方验证</string>
    <string name="be_added">对方已同意</string>
    <string name="be_refused">对方已拒绝</string>
    <string name="new_friend">新朋友</string>
    <string name="delete_fail">删除失败</string>
    <string name="scan_qr_join_friend">扫一扫二维码，加我为好友</string>
    <string name="scan_qr_join_group">扫一扫二维码，加入群聊</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>

    <string name="setting_edit">编辑资料</string>
    <string name="setting_pwd">修改密码</string>
    <string name="setting_wallet">我的钱包</string>
    <string name="setting_collect">我的收藏</string>
    <string name="setting_setting">通用设置</string>
    <string name="setting_my_qrcode">我的二维码</string>
    <string name="group_qrcode">群二维码</string>
    <string name="setting_logout"><u>退出登录</u></string>
    <string name="setting_add_friend_verify">加我为朋友时需要验证</string>
    <string name="setting_mute_all">静音所有消息</string>
    <string name="setting_black_list">黑名单</string>
    <string name="setting_cur_version">当前版本号</string>
    <string name="logout_tip">确定退出登录？</string>
    <string name="user_info_title">个人信息</string>
    <string name="user_avatar">头像</string>
    <string name="user_nick_name">昵称</string>
    <string name="user_nick_name1">昵称:%s</string>
    <string name="user_account">账号</string>
    <string name="user_account1">账号:%s</string>
    <string name="copy_account">复制账号</string>
    <string name="user_phone">手机号</string>
    <string name="user_email">邮箱</string>
    <string name="user_sex">性别</string>
    <string name="user_male">男</string>
    <string name="user_female">女</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="modify_nick_name_hint">请输入昵称</string>
    <string name="nick_name_cannot_empty">昵称不能为空</string>
    <string name="set_note_name">设置备注名</string>
    <string name="set_note_name_hint">请输入备注名</string>
    <string name="modify_note_name">修改备注名</string>
    <string name="note_name_cannot_empty">备注名不能为空</string>
    <string name="add_black">加入黑名单</string>
    <string name="remove_black">移出黑名单</string>
    <string name="send_message">发消息</string>
    <string name="delete_friend">删除好友</string>
    <string name="billing_details">钱包明细</string>
    <string name="wallet_balance_tip">钱包余额 (%s)</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="manager_my">管理我的</string>
    <string name="withdraw_account">提现账户</string>
    <string name="make_collections">收款</string>
    <string name="wallet_address">钱包地址</string>
    <string name="collection_address">收款地址</string>
    <string name="select_wallet">选择钱包</string>
    <string name="withdraw_money">提现金额</string>
    <string name="input_num">请输入数量</string>
    <string name="input_collection_address">请输入钱包地址</string>
    <string name="please_select_currency">请选择币种</string>
    <string name="all">全部</string>
    <string name="wallet_balance">钱包余额</string>
    <string name="no_history_address">暂无钱包地址</string>
    <string name="no_coin_type">暂无币种类型</string>


    <string name="seal_main_title_start_chat">发起聊天</string>
    <string name="seal_main_title_create_group">创建群组</string>
    <string name="seal_main_title_add_friends">添加好友</string>
    <string name="seal_main_title_scan">扫一扫</string>

    <string name="select_friend">选择朋友</string>
    <string name="select_concat">选择联系人</string>
    <string name="seal_select_group_member">选择群组成员</string>
    <string name="select_mention_people">选择提醒的人</string>
    <string name="all_people">所有人</string>
    <string name="group">群组</string>
    <string name="pick_group">选择群聊</string>
    <string name="group_member">群组成员</string>
    <string name="group_info">群组信息</string>
    <string name="group_name">群组名称</string>
    <string name="group_qr_code">群二维码</string>
    <string name="group_manager">群管理员</string>
    <string name="group_avatar">群组头像</string>
    <string name="group_mute">全员禁言</string>
    <string name="group_call">允许群音视频通话</string>
    <string name="member_mute">禁止发言</string>
    <string name="member_undisturb">消息免打扰</string>
    <string name="seal_mute_all_tips">开启后，仅群主和管理员可以发言</string>
    <string name="group_manager_max_tip">群管理员数已达到上限～</string>
    <string name="group_manager_min_tip">没有管理员可被移除</string>
    <string name="unmute">解除禁言</string>
    <string name="remove_group">移除群聊</string>
    <string name="group_host_can_modify">仅群管理员可修改</string>
    <string name="modify_group_name">修改群聊名称</string>
    <string name="modify_group_name_hint">请输入群聊名称</string>
    <string name="group_name_cannot_empty">群聊名称不能为空</string>
    <string name="dissolve_exit">解散并退出</string>
    <string name="delete_exit">删除并退出</string>
    <string name="show_more_group_member">查看更多群成员 ></string>
    <string name="complete">完成</string>
    <string name="delete">删除</string>
    <string name="max_member_be_select">最多选择%d个成员</string>
    <string name="mention_me_tip">[有人@我]</string>
    <string name="is_dissolve_group">是否解散群聊？</string>
    <string name="is_exit_group">是否退出群聊？</string>
    <string name="is_forward_message">是否转发给 %s</string>

</resources>