<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/ui_white">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.legend.common.widget.SettingItemView
                    android:id="@+id/siv_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:content_text="@string/user_avatar"
                    app:left_icon_visibility="8" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/riv_avatar"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="40dp"
                    app:riv_oval="true"
                    app:riv_border_width="1dp"
                    app:riv_border_color="@color/ui_white"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_user_avatar" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ui_line_bg"/>

            <com.legend.common.widget.SettingItemView
                android:id="@+id/siv_nick_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:content_text="@string/user_nick_name"
                app:left_icon_visibility="8" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ui_line_bg"/>

            <com.legend.common.widget.SettingItemView
                android:id="@+id/siv_account_real"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:content_text="@string/user_phone"
                app:left_icon_visibility="8"
                app:arrow_visibility="8"
                tools:visibility="visible"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ui_line_bg"
                tools:visibility="visible"
                android:visibility="gone"/>

            <com.legend.common.widget.SettingItemView
                android:id="@+id/siv_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:content_text="@string/user_sex"
                app:left_icon_visibility="8" />
        </LinearLayout>
    </FrameLayout>

</layout>