<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_new_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_friend"
            android:textSize="14sp"
            android:textColor="@color/text_black"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/new_friend_red_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shape_round_dot_red"
            app:layout_constraintStart_toEndOf="@id/tv_new_friends"
            app:layout_constraintTop_toTopOf="@id/tv_new_friends"
            tools:visibility="visible"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_chat_msg"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/view_page"/>

        <ImageView
            android:id="@+id/img_more"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_add_green"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@id/tv_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_page"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintBottom_toTopOf="@id/bottom_bar"/>

        <com.legend.baseui.ui.widget.bottombar.BottomBarLayout
            android:id="@+id/bottom_bar"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:gravity="center"
            android:background="@drawable/shape_bottom_bar_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.legend.baseui.ui.widget.bottombar.BottomBarItem
                android:id="@+id/tab_chat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconNormal="@mipmap/tab_message_unselect"
                app:iconSelected="@mipmap/tab_message_selected"
                app:itemText="@string/tab_chat"
                app:itemTextBold="true"
                app:textColorNormal="@color/tab_unselect_color"
                app:textColorSelected="@color/tab_selected_color"
                app:itemMarginTop="4dp"
                app:itemTextSize="12sp" />

            <com.legend.baseui.ui.widget.bottombar.BottomBarItem
                android:id="@+id/tab_friends"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconNormal="@mipmap/tab_friend_unselect"
                app:iconSelected="@mipmap/tab_friend_selected"
                app:itemText="@string/tab_friends"
                app:itemTextBold="true"
                app:textColorNormal="@color/tab_unselect_color"
                app:textColorSelected="@color/tab_selected_color"
                app:itemMarginTop="4dp"
                app:itemTextSize="12sp" />

<!--            <com.legend.baseui.ui.widget.bottombar.BottomBarItem-->
<!--                android:id="@+id/tab_find"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                app:iconNormal="@mipmap/tab_me_unselect"-->
<!--                app:iconSelected="@mipmap/tab_me_selected"-->
<!--                app:itemText="@string/tab_find"-->
<!--                app:itemTextBold="true"-->
<!--                app:textColorNormal="@color/tab_unselect_color"-->
<!--                app:textColorSelected="@color/tab_selected_color"-->
<!--                app:itemTextSize="12sp" />-->

            <com.legend.baseui.ui.widget.bottombar.BottomBarItem
                android:id="@+id/tab_mine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:iconNormal="@mipmap/tab_me_unselect"
                app:iconSelected="@mipmap/tab_me_selected"
                app:itemText="@string/tab_mine"
                app:itemTextBold="true"
                app:textColorNormal="@color/tab_unselect_color"
                app:textColorSelected="@color/tab_selected_color"
                app:itemMarginTop="4dp"
                app:itemTextSize="12sp" />
        </com.legend.baseui.ui.widget.bottombar.BottomBarLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>